log
Sat, May 17, 2025  2:30:42 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sun, May 18, 2025 12:20:44 AM: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:73:7: error: expected ')' before '{' token
       {
       ^
sudoku.c:85:1: error: expected expression before '}' token
 }
 ^
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: unused variable 'col' [-Werror=unused-variable]
     int col =-1;
         ^~~
sudoku.c:68:11: error: unused variable 'list' [-Werror=unused-variable]
     List* list=createList();
           ^~~~
sudoku.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
02b60d6
Sun, May 18, 2025 12:20:57 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int col =-1;
         ^~~
cc1.exe: all warnings being treated as errors
921ce55
Sun, May 18, 2025 12:21:08 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int col =-1;
         ^~~
cc1.exe: all warnings being treated as errors
f2d4152
Sun, May 18, 2025 12:23:09 AM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
sudoku.c:70:9: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int col =-1;
         ^~~
cc1.exe: all warnings being treated as errors
9879819
Sun, May 18, 2025 12:28:39 AM: 
 sudoku.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:93:15: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return(EXIT_FAILURE);
               ^
sudoku.c:99:5: error: expected ';' before '}' token
     }
     ^
sudoku.c:71:9: error: unused variable 'found' [-Werror=unused-variable]
     int found =0;
         ^~~~~
cc1.exe: all warnings being treated as errors
f3bd112
Sun, May 18, 2025 12:28:55 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:93:15: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return(EXIT_FAILURE);
               ^
sudoku.c:99:5: error: expected ';' before '}' token
     }
     ^
cc1.exe: all warnings being treated as errors
cea817b
Sun, May 18, 2025 12:30:06 AM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:87:30: error: expected ';' before '}' token
     if(filas==-1){return list};
                              ^
sudoku.c:94:13: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       return(EXIT_FAILURE);
             ^
cc1.exe: all warnings being treated as errors
6e6ec87
Sun, May 18, 2025 12:30:56 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:87:30: error: expected ';' before '}' token
     if(filas==-1){return list};
                              ^
ead5558
Sun, May 18, 2025 12:31:14 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0247e2f
Sun, May 18, 2025 12:58:19 AM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|4
total_score: 15/70
9ae3b90
Sun, May 18, 2025  1:15:08 AM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
da51edd
Sun, May 18, 2025  1:23:00 AM: 
 sudoku.c | 41 ++++++++++++++++++++++++++++++++++++-----
 1 file changed, 36 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:51:35: error: statement with no effect [-Werror=unused-value]
     for(int j=0;j<=9;j++)marked[j]==0;
                          ~~~~~~~~~^~~
cc1.exe: all warnings being treated as errors
6d51284
Sun, May 18, 2025  1:23:40 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b9ef1ac
Sun, May 18, 2025  1:26:07 AM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:141:17: error: passing argument 1 of 'is_valid' from incompatible pointer type [-Werror=incompatible-pointer-types]
     if(is_valid(list,nuevo))
                 ^~~~
sudoku.c:46:5: note: expected 'Node * {aka struct <anonymous> *}' but argument is of type 'List * {aka struct List *}'
 int is_valid(Node* n){
     ^~~~~~~~
sudoku.c:141:8: error: too many arguments to function 'is_valid'
     if(is_valid(list,nuevo))
        ^~~~~~~~
sudoku.c:46:5: note: declared here
 int is_valid(Node* n){
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
8f1f928
Sun, May 18, 2025  1:27:25 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
7e1c46d
